Upgrade to java 21